# Stalcraft-JVM-Flag-fix

./: README.en.md  README.md
stalcraft-jvm-wrapper/: .gitignore  IFEO_DEBUGGER_MODE.md  IMPLEMENTATION.md  MIGRATION.md  README.md  README_RU.md  RESPONSIVE_CHANGES.md  USAGE.md  package-lock.json  package.json  vite.config.js
stalcraft-jvm-wrapper/src/: index.html  main.js
stalcraft-jvm-wrapper/src-tauri/: Cargo.toml  tauri.conf.json
stalcraft-jvm-wrapper/src-tauri/capabilities/: main.json
stalcraft-jvm-wrapper/src-tauri/icons/: icon.icns
stalcraft-jvm-wrapper/src-tauri/src/: commands.rs  config.rs  ifeo.rs  jvm.rs  main.rs  process.rs  system.rs
stalcraft-jvm-wrapper/src/assets/: styles.css
